fixed line spacing issue

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -70,3 +70,7 @@ row {
 p.thick {
     font-weight: bold;
 }
+
+p.error-message {
+    margin-left: 5px;
+}
